[package]
name = "rest"
version = "0.1.0"
authors = ["simon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
serde = "1.0"
serde_derive = "1.0"
rand = "0.8.3" 

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
