[package]
name = "rest"
version = "0.1.0"
authors = ["simon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
serde = "1.0"
serde_derive = "1.0"
rand = "0.8.3" 
jsonwebtoken = "7.2.0"
crypto-hashes = "0.9"
hmac = "0.11"
chrono = "0.4"
grep = "0.2"
figment = { version = "0.10", default-features = false, features = ["toml", "env"] }

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]

[dependencies.flate2]
version = "0.2"