[package]
name = "rest"
version = "0.1.0"
authors = ["simon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
rand = "0.8.3" 
jsonwebtoken = "7.2.0"
crypto-hashes = "0.9"
hmac = "0.11"
chrono = "0.4"
grep = "0.2"
figment = { version = "0.10", default-features = false, features = ["toml", "env"] }
git2 = "0.13"
filetime = "0.2"
hex = "0.4"
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }

[dependencies.flate2]
version = "0.2"